# openclcc

./: Makefile.am  ProjectHome.md  configure.ac  openclccembed.md  setup.sh
embed/: Makefile.am  Makefile.in  openclcc-embed.in
embed/examples/: Makefile  shared.cpp
src/: Makefile.am  io.c  io.h  log.c  log.h  opencl.c  opencl.h  openclcc.c
